// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`custom open/close text 1`] = `
<body>
  <div>
    <div
      data-rmiz-wrap="visible"
    >
      <img
        alt="foo"
        src="foo.jpg"
        width="500"
      />
      <button
        aria-label="Open me"
        data-rmiz-btn-open="true"
        type="button"
      />
    </div>
  </div>
</body>
`;

exports[`custom open/close text 2`] = `
<body>
  <div>
    <div
      data-rmiz-wrap="hidden"
    >
      <img
        alt="foo"
        src="foo.jpg"
        width="500"
      />
      <button
        aria-label="Open me"
        data-rmiz-btn-open="true"
        type="button"
      />
    </div>
  </div>
  <div
    aria-label="Zoomed image"
    aria-modal="true"
    data-rmiz-overlay="true"
    role="dialog"
    style="background-color: rgba(255, 255, 255, 0.95); transition-duration: 300ms; z-index: 2147483647;"
  >
    <div
      data-rmiz-modal-content="true"
      style="height: 0px; left: 0px; top: 0px; transform: scale(Infinity) translate(0px, 0px); transition-duration: 300ms; width: 0px;"
    >
      <img
        alt="foo"
        src="foo.jpg"
        width="500"
      />
    </div>
    <button
      aria-label="Close me"
      data-rmiz-btn-close="true"
      type="button"
    />
  </div>
</body>
`;

exports[`renders with different props 1`] = `
<body>
  <span
    data-rmiz-wrap="visible"
  >
    <img
      alt="foo"
      src="foo.jpg"
      width="500"
    />
    <button
      aria-label="Zoom image"
      data-rmiz-btn-open="true"
      type="button"
    />
  </span>
</body>
`;

exports[`renders without browser environment 1`] = `
<body>
  <div
    data-rmiz-wrap="visible"
  >
    <img
      alt="foo"
      src="foo.jpg"
      width="500"
    />
    <button
      aria-label="Zoom image"
      data-rmiz-btn-open="true"
      type="button"
    />
  </div>
</body>
`;

exports[`when closed and then open 1`] = `
<body>
  <div>
    <div
      data-rmiz-wrap="visible"
    >
      <img
        alt="foo"
        src="foo.jpg"
        width="500"
      />
      <button
        aria-label="Zoom image"
        data-rmiz-btn-open="true"
        type="button"
      />
    </div>
  </div>
</body>
`;

exports[`when closed and then open 2`] = `
<body>
  <div>
    <div
      data-rmiz-wrap="hidden"
    >
      <img
        alt="foo"
        src="foo.jpg"
        width="500"
      />
      <button
        aria-label="Zoom image"
        data-rmiz-btn-open="true"
        type="button"
      />
    </div>
  </div>
  <div
    aria-label="Zoomed image"
    aria-modal="true"
    data-rmiz-overlay="true"
    role="dialog"
    style="background-color: rgba(255, 255, 255, 0.95); transition-duration: 300ms; z-index: 2147483647;"
  >
    <div
      data-rmiz-modal-content="true"
      style="height: 0px; left: 0px; top: 0px; transform: scale(Infinity) translate(0px, 0px); transition-duration: 300ms; width: 0px;"
    >
      <img
        alt="foo"
        src="foo.jpg"
        width="500"
      />
    </div>
    <button
      aria-label="Unzoom image"
      data-rmiz-btn-close="true"
      type="button"
    />
  </div>
</body>
`;

exports[`when closed and then open 3`] = `
<body>
  <div>
    <div
      data-rmiz-wrap="hidden"
    >
      <img
        alt="foo"
        src="foo.jpg"
        width="500"
      />
      <button
        aria-label="Zoom image"
        data-rmiz-btn-open="true"
        type="button"
      />
    </div>
  </div>
  <div
    aria-label="Zoomed image"
    aria-modal="true"
    data-rmiz-overlay="true"
    role="dialog"
    style="background-color: rgba(255, 255, 255, 0); transition-duration: 300ms; z-index: 2147483647;"
  >
    <div
      data-rmiz-modal-content="true"
      style="height: 0px; left: 0px; top: 0px; transform: scale(1) translate(0, 0); transition-duration: 300ms; width: 0px;"
    >
      <img
        alt="foo"
        src="foo.jpg"
        width="500"
      />
    </div>
    <button
      aria-label="Unzoom image"
      data-rmiz-btn-close="true"
      type="button"
    />
  </div>
</body>
`;

exports[`when closed and then open 4`] = `
<body>
  <div>
    <div
      data-rmiz-wrap="visible"
    >
      <img
        alt="foo"
        src="foo.jpg"
        width="500"
      />
      <button
        aria-label="Zoom image"
        data-rmiz-btn-open="true"
        type="button"
      />
    </div>
  </div>
</body>
`;

exports[`when open and then closed 1`] = `
<body>
  <div>
    <div
      data-rmiz-wrap="hidden"
    >
      <img
        alt="foo"
        src="foo.jpg"
        width="500"
      />
      <button
        aria-label="Zoom image"
        data-rmiz-btn-open="true"
        type="button"
      />
    </div>
  </div>
  <div
    aria-label="Zoomed image"
    aria-modal="true"
    data-rmiz-overlay="true"
    role="dialog"
    style="background-color: rgba(255, 255, 255, 0); transition-duration: 300ms; z-index: 2147483647;"
  >
    <div
      data-rmiz-modal-content="true"
      style="height: 0px; left: 0px; top: 0px; transform: scale(1) translate(0, 0); transition-duration: 300ms; width: 0px;"
    >
      <img
        alt="foo"
        src="foo.jpg"
        width="500"
      />
    </div>
    <button
      aria-label="Unzoom image"
      data-rmiz-btn-close="true"
      type="button"
    />
  </div>
</body>
`;

exports[`when open and then closed 2`] = `
<body>
  <div>
    <div
      data-rmiz-wrap="visible"
    >
      <img
        alt="foo"
        src="foo.jpg"
        width="500"
      />
      <button
        aria-label="Zoom image"
        data-rmiz-btn-open="true"
        type="button"
      />
    </div>
  </div>
</body>
`;
